Fix overlapping on Frax mobile page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -397,7 +397,7 @@ h1 {
 }
 
 .spacer {
-  margin-top:-200px;
+  margin-top:0px;
 }
 
 @media only screen and (min-width: 720px) {
